[project]
name = "nuc"
version = "0.3.0"
description = """\
    Data structures and functionalities for the Nillion \
    Network user identity and authorization framework.\
    """
license = {text = "MIT"}
readme = "README.rst"
requires-python = ">=3.9"
dependencies = [
    "cosmpy==0.9.2",
    "requests==2.32.3",
    "secp256k1==0.14.0",
]

[project.urls]
Repository = "https://github.com/nillionnetwork/nuc-py"
Documentation = "https://nuc.readthedocs.io"

[project.optional-dependencies]
docs = [
    "toml~=0.10.2",
    "sphinx~=8.0",
    "sphinx-rtd-theme~=3.0",
    "myst-parser==2.0.0"
]
test = [
    "pytest~=8.4",
    "pytest-cov~=7.0"
]
lint = [
    "ruff==0.7.0", 
    "pylint~=3.3.0",
    "pyright==1.1.396",
]
coveralls = [
    "coveralls~=4.0"
]
publish = [
    "build~=0.10",
    "twine~=4.0"
]

[build-system]
requires = [
    "setuptools>=77.0"
]
build-backend = "setuptools.build_meta"

[tool.ruff]
exclude = [".venv"]

[tool.pytest.ini_options]
addopts = "--doctest-modules --ignore=docs --cov=nuc --cov-report term-missing"
